# find_my_uri

./: .env~  .gitignore  LICENSE  MANIFEST.in  README.md  convert_data.py  find_my_uri.py  publish_to_pypi.md  pyproject.toml  uricli.py
docs/: index.html  main.js  style.css
docs/data/: metadata.json
find_my_uri/: __init__.py  __main__.py  build_db.py  cli.py  core.py
find_my_uri/data/: document_metadata.pickle
find_my_uri/vector_db/31635619-8e5e-486a-a71d-b7171e6d7b0e/: index_metadata.pickle
find_my_uri/vector_db/5c92347b-74c0-456a-978d-d5df6987761b/: index_metadata.pickle
